--- a/app/output.css
+++ b/app/output.css
@@ -604,9 +604,26 @@ video {
   z-index: 50;
 }
 
+.z-\[\] {
+  z-index: ;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
+.z-30 {
+  z-index: 30;
+}
+
 .mx-\[10px\] {
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mb-\[-20px\] {
@@ -629,6 +646,10 @@ video {
   margin-top: 10px;
 }
 
+.mt-\[15px\] {
+  margin-top: 15px;
+}
+
 .mt-\[20px\] {
   margin-top: 20px;
 }
@@ -639,6 +660,34 @@ video {
 
 .mt-\[5px\] {
   margin-top: 5px;
+}
+
+.mt-\[50px\] {
+  margin-top: 50px;
+}
+
+.mt-\[-50px\] {
+  margin-top: -50px;
+}
+
+.mt-\[\] {
+  margin-top: ;
+}
+
+.mt-\[100px\] {
+  margin-top: 100px;
+}
+
+.mt-\[90px\] {
+  margin-top: 90px;
+}
+
+.mt-\[87px\] {
+  margin-top: 87px;
+}
+
+.mt-\[85px\] {
+  margin-top: 85px;
 }
 
 .flex {
@@ -757,6 +806,34 @@ video {
   height: 100%;
 }
 
+.h-screen {
+  height: 100vh;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
+}
+
+.h-\[500px\] {
+  height: 500px;
+}
+
+.h-\[800px\] {
+  height: 800px;
+}
+
+.h-\[700px\] {
+  height: 700px;
+}
+
+.h-\[600px\] {
+  height: 600px;
+}
+
 .min-h-\[10vh\] {
   min-height: 10vh;
 }
@@ -775,6 +852,10 @@ video {
 
 .w-\[150px\] {
   width: 150px;
+}
+
+.w-\[170px\] {
+  width: 170px;
 }
 
 .w-\[200px\] {
@@ -921,6 +1002,10 @@ video {
   overflow: hidden;
 }
 
+.rounded-\[5px\] {
+  border-radius: 5px;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -972,6 +1057,11 @@ video {
 .bg-blue-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(147 197 253 / var(--tw-bg-opacity));
+}
+
+.bg-blue-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
 .bg-blue-600 {
@@ -1070,6 +1160,10 @@ video {
 
 .p-\[25px\] {
   padding: 25px;
+}
+
+.p-\[40px\] {
+  padding: 40px;
 }
 
 .px-\[10px\] {
@@ -1197,6 +1291,10 @@ video {
   font-size: 36px;
 }
 
+.text-\[10px\] {
+  font-size: 10px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1268,6 +1366,10 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-\[\] {
+  color: ;
+}
+
 .underline-offset-\[3px\] {
   text-underline-offset: 3px;
 }
@@ -1337,6 +1439,27 @@ body{
   border-color: rgb(249 115 22 / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.inputlogin {
+  height: 50px;
+  border-bottom-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(163 163 163 / var(--tw-border-opacity));
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.inputlogin:focus {
+  --tw-bg-opacity: 1;
+  background-color: rgb(245 245 245 / var(--tw-bg-opacity));
+}
+
+.labellogin {
+  font-size: 15px;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(115 115 115 / var(--tw-text-opacity));
 }
 
 .noSelect {
@@ -1506,6 +1629,10 @@ body{
     height: 92vh;
   }
 
+  .lg\:h-\[80vh\] {
+    height: 80vh;
+  }
+
   .lg\:w-\[20\%\] {
     width: 20%;
   }
@@ -1530,6 +1657,10 @@ body{
     width: 30%;
   }
 
+  .lg\:w-\[300px\] {
+    width: 300px;
+  }
+
   .lg\:w-\[40\%\] {
     width: 40%;
   }
@@ -1548,6 +1679,10 @@ body{
 
   .lg\:w-full {
     width: 100%;
+  }
+
+  .lg\:w-\[400px\] {
+    width: 400px;
   }
 
   .lg\:flex-row {
