--- a/app/output.css
+++ b/app/output.css
@@ -572,6 +572,10 @@ video {
   bottom: 45px;
 }
 
+.left-\[0\] {
+  left: 0;
+}
+
 .left-\[10\%\] {
   left: 10%;
 }
@@ -582,6 +586,10 @@ video {
 
 .right-\[80px\] {
   right: 80px;
+}
+
+.top-\[0\] {
+  top: 0;
 }
 
 .top-\[0px\] {
@@ -600,20 +608,16 @@ video {
   z-index: 10;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
-.z-\[\] {
-  z-index: ;
-}
-
 .z-20 {
   z-index: 20;
 }
 
 .z-30 {
   z-index: 30;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .mx-\[10px\] {
@@ -638,16 +642,24 @@ video {
   margin-bottom: 230px;
 }
 
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
+.mt-\[-100px\] {
+  margin-top: -100px;
+}
+
 .mt-\[-30px\] {
   margin-top: -30px;
 }
 
 .mt-\[10px\] {
   margin-top: 10px;
-}
-
-.mt-\[15px\] {
-  margin-top: 15px;
 }
 
 .mt-\[20px\] {
@@ -660,34 +672,6 @@ video {
 
 .mt-\[5px\] {
   margin-top: 5px;
-}
-
-.mt-\[50px\] {
-  margin-top: 50px;
-}
-
-.mt-\[-50px\] {
-  margin-top: -50px;
-}
-
-.mt-\[\] {
-  margin-top: ;
-}
-
-.mt-\[100px\] {
-  margin-top: 100px;
-}
-
-.mt-\[90px\] {
-  margin-top: 90px;
-}
-
-.mt-\[87px\] {
-  margin-top: 87px;
-}
-
-.mt-\[85px\] {
-  margin-top: 85px;
 }
 
 .flex {
@@ -704,6 +688,10 @@ video {
 
 .h-\[100px\] {
   height: 100px;
+}
+
+.h-\[10vh\] {
+  height: 10vh;
 }
 
 .h-\[1150px\] {
@@ -744,6 +732,10 @@ video {
 
 .h-\[350px\] {
   height: 350px;
+}
+
+.h-\[35px\] {
+  height: 35px;
 }
 
 .h-\[370px\] {
@@ -790,6 +782,10 @@ video {
   height: 60%;
 }
 
+.h-\[600px\] {
+  height: 600px;
+}
+
 .h-\[60px\] {
   height: 60px;
 }
@@ -802,36 +798,16 @@ video {
   height: 90%;
 }
 
+.h-\[90vh\] {
+  height: 90vh;
+}
+
 .h-full {
   height: 100%;
 }
 
 .h-screen {
   height: 100vh;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[80vh\] {
-  height: 80vh;
-}
-
-.h-\[500px\] {
-  height: 500px;
-}
-
-.h-\[800px\] {
-  height: 800px;
-}
-
-.h-\[700px\] {
-  height: 700px;
-}
-
-.h-\[600px\] {
-  height: 600px;
 }
 
 .min-h-\[10vh\] {
@@ -870,6 +846,10 @@ video {
   width: 26vw;
 }
 
+.w-\[35px\] {
+  width: 35px;
+}
+
 .w-\[370px\] {
   width: 370px;
 }
@@ -880,6 +860,10 @@ video {
 
 .w-\[60px\] {
   width: 60px;
+}
+
+.w-\[70px\] {
+  width: 70px;
 }
 
 .w-\[80\%\] {
@@ -906,6 +890,10 @@ video {
   width: 100%;
 }
 
+.w-screen {
+  width: 100vw;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -922,12 +910,20 @@ video {
   flex-wrap: wrap;
 }
 
+.items-start {
+  align-items: flex-start;
+}
+
 .items-center {
   align-items: center;
 }
 
 .justify-start {
   justify-content: flex-start;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -1002,6 +998,10 @@ video {
   overflow: hidden;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .rounded-\[5px\] {
   border-radius: 5px;
 }
@@ -1028,6 +1028,10 @@ video {
 
 .border-b-\[4px\] {
   border-bottom-width: 4px;
+}
+
+.border-r {
+  border-right-width: 1px;
 }
 
 .border-t {
@@ -1057,11 +1061,6 @@ video {
 .bg-blue-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(147 197 253 / var(--tw-bg-opacity));
-}
-
-.bg-blue-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(59 130 246 / var(--tw-bg-opacity));
 }
 
 .bg-blue-600 {
@@ -1109,6 +1108,16 @@ video {
   background-color: rgb(249 115 22 / var(--tw-bg-opacity));
 }
 
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
+.bg-stone-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 250 249 / var(--tw-bg-opacity));
+}
+
 .bg-teal-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(94 234 212 / var(--tw-bg-opacity));
@@ -1122,6 +1131,10 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
 }
 
 .bg-opacity-\[80\%\] {
@@ -1140,6 +1153,10 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.p-6 {
+  padding: 1.5rem;
 }
 
 .p-\[10px\] {
@@ -1166,6 +1183,11 @@ video {
   padding: 40px;
 }
 
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .px-\[10px\] {
   padding-left: 10px;
   padding-right: 10px;
@@ -1184,6 +1206,11 @@ video {
 .px-\[22px\] {
   padding-left: 22px;
   padding-right: 22px;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-\[30px\] {
@@ -1291,10 +1318,6 @@ video {
   font-size: 36px;
 }
 
-.text-\[10px\] {
-  font-size: 10px;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1366,12 +1389,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[\] {
-  color: ;
-}
-
 .underline-offset-\[3px\] {
   text-underline-offset: 3px;
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .shadow-md {
@@ -1413,6 +1438,22 @@ video {
 
 .filter {
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body{
@@ -1462,6 +1503,16 @@ body{
   color: rgb(115 115 115 / var(--tw-text-opacity));
 }
 
+.topspace {
+  margin-top: 85px;
+}
+
+@media (min-width: 1024px) {
+  .topspace {
+    margin-top: 10vh;
+  }
+}
+
 .noSelect {
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
@@ -1508,6 +1559,20 @@ body{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
   border-radius: 5px;
+}
+
+.hover\:ml-\[10px\]:hover {
+  margin-left: 10px;
+}
+
+.hover\:bg-gray-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-red-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue-600:hover {
@@ -1573,10 +1638,6 @@ body{
     margin-bottom: 5px;
   }
 
-  .lg\:mt-\[10vh\] {
-    margin-top: 10vh;
-  }
-
   .lg\:mt-\[30px\] {
     margin-top: 30px;
   }
@@ -1595,6 +1656,10 @@ body{
 
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:h-\[100vh\] {
+    height: 100vh;
   }
 
   .lg\:h-\[250px\] {
@@ -1629,8 +1694,8 @@ body{
     height: 92vh;
   }
 
-  .lg\:h-\[80vh\] {
-    height: 80vh;
+  .lg\:w-\[13vw\] {
+    width: 13vw;
   }
 
   .lg\:w-\[20\%\] {
@@ -1657,12 +1722,12 @@ body{
     width: 30%;
   }
 
-  .lg\:w-\[300px\] {
-    width: 300px;
-  }
-
   .lg\:w-\[40\%\] {
     width: 40%;
+  }
+
+  .lg\:w-\[400px\] {
+    width: 400px;
   }
 
   .lg\:w-\[50\%\] {
@@ -1679,10 +1744,6 @@ body{
 
   .lg\:w-full {
     width: 100%;
-  }
-
-  .lg\:w-\[400px\] {
-    width: 400px;
   }
 
   .lg\:flex-row {
