contact dash page done

--- a/app/output.css
+++ b/app/output.css
@@ -649,6 +649,10 @@ video {
   margin-top: 10px;
 }
 
+.mt-\[15px\] {
+  margin-top: 15px;
+}
+
 .mt-\[20px\] {
   margin-top: 20px;
 }
@@ -669,8 +673,8 @@ video {
   margin-top: 5px;
 }
 
-.mt-\[4px\] {
-  margin-top: 4px;
+.mt-\[22px\] {
+  margin-top: 22px;
 }
 
 .flex {
@@ -715,6 +719,10 @@ video {
 
 .h-\[240px\] {
   height: 240px;
+}
+
+.h-\[24px\] {
+  height: 24px;
 }
 
 .h-\[250px\] {
@@ -809,6 +817,10 @@ video {
   height: 90%;
 }
 
+.h-\[95px\] {
+  height: 95px;
+}
+
 .h-full {
   height: 100%;
 }
@@ -821,36 +833,56 @@ video {
   height: ;
 }
 
-.h-\[70px\] {
-  height: 70px;
+.h-\[70\] {
+  height: 70;
 }
 
-.h-\[80px\] {
-  height: 80px;
+.h-\[70vh\] {
+  height: 70vh;
 }
 
-.h-\[10px\] {
-  height: 10px;
+.h-\[80vh\] {
+  height: 80vh;
 }
 
-.h-\[15px\] {
-  height: 15px;
+.h-\[90vh\] {
+  height: 90vh;
 }
 
-.h-\[20px\] {
-  height: 20px;
+.h-\[87vh\] {
+  height: 87vh;
 }
 
-.h-\[85px\] {
-  height: 85px;
+.h-\[88vh\] {
+  height: 88vh;
 }
 
-.h-\[95px\] {
-  height: 95px;
+.h-\[280px\] {
+  height: 280px;
 }
 
-.h-\[24px\] {
-  height: 24px;
+.h-\[420px\] {
+  height: 420px;
+}
+
+.h-\[430px\] {
+  height: 430px;
+}
+
+.h-\[450px\] {
+  height: 450px;
+}
+
+.h-\[140px\] {
+  height: 140px;
+}
+
+.h-\[470px\] {
+  height: 470px;
+}
+
+.h-\[480px\] {
+  height: 480px;
 }
 
 .min-h-\[10vh\] {
@@ -951,6 +983,14 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-\[100px\] {
+  width: 100px;
+}
+
+.w-\[140px\] {
+  width: 140px;
 }
 
 .shrink-0 {
@@ -1093,20 +1133,16 @@ video {
   border-bottom-width: 1px;
 }
 
+.border-b-\[2px\] {
+  border-bottom-width: 2px;
+}
+
 .border-b-\[4px\] {
   border-bottom-width: 4px;
 }
 
 .border-t {
   border-top-width: 1px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
-}
-
-.border-b-\[2px\] {
-  border-bottom-width: 2px;
 }
 
 .border-gray-200 {
@@ -1367,6 +1403,10 @@ video {
   font-size: 16px;
 }
 
+.text-\[17px\] {
+  font-size: 17px;
+}
+
 .text-\[18px\] {
   font-size: 18px;
 }
@@ -1409,10 +1449,6 @@ video {
 
 .text-\[36px\] {
   font-size: 36px;
-}
-
-.text-\[17px\] {
-  font-size: 17px;
 }
 
 .font-bold {
@@ -1466,6 +1502,11 @@ video {
   color: rgb(229 229 229 / var(--tw-text-opacity));
 }
 
+.text-neutral-500 {
+  --tw-text-opacity: 1;
+  color: rgb(115 115 115 / var(--tw-text-opacity));
+}
+
 .text-neutral-600 {
   --tw-text-opacity: 1;
   color: rgb(82 82 82 / var(--tw-text-opacity));
@@ -1504,15 +1545,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\] {
-  color: ;
-}
-
-.text-neutral-500 {
-  --tw-text-opacity: 1;
-  color: rgb(115 115 115 / var(--tw-text-opacity));
 }
 
 .underline-offset-\[3px\] {
@@ -1673,6 +1705,33 @@ body{
   font-weight: 600;
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+/* the contact details Dashboard details  */
+
+.inputContact {
+  margin-top: 10px;
+  height: 50px;
+  width: 100%;
+  --tw-border-opacity: 1;
+  border-color: rgb(255 103 0 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+  padding: 10px;
+  font-size: 14px;
+  --tw-text-opacity: 1;
+  color: rgb(82 82 82 / var(--tw-text-opacity));
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  border-radius: 5px;
+}
+
+.inputContact:hover {
+  border-width: 1px;
+}
+
+.inputContact:focus {
+  border-width: 1px;
 }
 
 .noSelect {
