--- a/app/globals.css
+++ b/app/globals.css
@@ -33,6 +33,13 @@ body{
 }
 
 
+/* the contact details Dashboard details  */
+
+.inputContact{
+  @apply w-[100%] bg-gray-100 rr h-[50px] mt-[10px] p-[10px] outline-none border-sec focus:border hover:border text-[14px] text-neutral-600
+}
+
+
 
 
 
