--- a/app/output.css
+++ b/app/output.css
@@ -572,6 +572,10 @@ video {
   bottom: 10px;
 }
 
+.bottom-\[20px\] {
+  bottom: 20px;
+}
+
 .bottom-\[45px\] {
   bottom: 45px;
 }
@@ -588,12 +592,24 @@ video {
   left: 10%;
 }
 
+.left-\[5\%\] {
+  left: 5%;
+}
+
+.right-0 {
+  right: 0px;
+}
+
 .right-\[-150px\] {
   right: -150px;
 }
 
-.right-\[10\%\] {
-  right: 10%;
+.right-\[30px\] {
+  right: 30px;
+}
+
+.right-\[5\%\] {
+  right: 5%;
 }
 
 .right-\[80px\] {
@@ -622,6 +638,10 @@ video {
 
 .top-\[1px\] {
   top: 1px;
+}
+
+.top-\[30px\] {
+  top: 30px;
 }
 
 .z-0 {
@@ -734,10 +754,6 @@ video {
   margin-top: 70px;
 }
 
-.mt-\[\] {
-  margin-top: ;
-}
-
 .flex {
   display: flex;
 }
@@ -772,6 +788,10 @@ video {
 
 .h-\[200px\] {
   height: 200px;
+}
+
+.h-\[20px\] {
+  height: 20px;
 }
 
 .h-\[230px\] {
@@ -902,6 +922,10 @@ video {
   height: 78vh;
 }
 
+.h-\[80px\] {
+  height: 80px;
+}
+
 .h-\[85px\] {
   height: 85px;
 }
@@ -968,6 +992,10 @@ video {
 
 .w-\[150px\] {
   width: 150px;
+}
+
+.w-\[20\%\] {
+  width: 20%;
 }
 
 .w-\[200px\] {
@@ -1042,6 +1070,10 @@ video {
   width: 70px;
 }
 
+.w-\[75\%\] {
+  width: 75%;
+}
+
 .w-\[80\%\] {
   width: 80%;
 }
@@ -1074,10 +1106,6 @@ video {
   width: 100vw;
 }
 
-.w-\[250px\] {
-  width: 250px;
-}
-
 .shrink-0 {
   flex-shrink: 0;
 }
@@ -1104,10 +1132,6 @@ video {
 
 .justify-start {
   justify-content: flex-start;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -1202,10 +1226,6 @@ video {
   overflow: scroll;
 }
 
-.rounded {
-  border-radius: 0.25rem;
-}
-
 .rounded-\[5px\] {
   border-radius: 5px;
 }
@@ -1290,6 +1310,10 @@ video {
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
+.bg-blue-800\/50 {
+  background-color: rgb(30 64 175 / 0.5);
+}
+
 .bg-gray-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -1349,6 +1373,15 @@ video {
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+
+.bg-red-600\/50 {
+  background-color: rgb(220 38 38 / 0.5);
+}
+
 .bg-sec {
   --tw-bg-opacity: 1;
   background-color: rgb(255 103 0 / var(--tw-bg-opacity));
@@ -1367,11 +1400,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-50 {
@@ -1453,6 +1481,11 @@ video {
   padding-right: 22px;
 }
 
+.px-\[25px\] {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1483,11 +1516,6 @@ video {
   padding-bottom: 70px;
 }
 
-.px-\[25px\] {
-  padding-left: 25px;
-  padding-right: 25px;
-}
-
 .pb-\[30px\] {
   padding-bottom: 30px;
 }
@@ -1514,6 +1542,10 @@ video {
 
 .text-\[10px\] {
   font-size: 10px;
+}
+
+.text-\[11px\] {
+  font-size: 11px;
 }
 
 .text-\[12px\] {
@@ -1584,6 +1616,14 @@ video {
   font-size: 36px;
 }
 
+.text-\[40px\] {
+  font-size: 40px;
+}
+
+.text-\[9px\] {
+  font-size: 9px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1636,6 +1676,11 @@ video {
 .text-gray-900 {
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.text-green-500 {
+  --tw-text-opacity: 1;
+  color: rgb(34 197 94 / var(--tw-text-opacity));
 }
 
 .text-neutral-200 {
@@ -1950,6 +1995,11 @@ body{
 
 .hover\:border:hover {
   border-width: 1px;
+}
+
+.hover\:bg-blue-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 64 175 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-gray-600:hover {
